<package>
  <name>knm_tiny_power</name>
  <version>0.1.0</version> <!--@2015/3/8-->
  <description>A driver for TinyPower with catkin</description>

  <maintainer email="ee13105@meiji.ac.jp">Tomohiro KONUMA</maintainer>
  <author>Masanobu-Saito</author> <!--editted by Tomohiro KONUMA-->

  <license>BSD</license>
  
  <url></url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cereal_cakin</build_depend>
  <build_depend>knm_tiny_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>cereal_cakin</run_depend>
  <run_depend>knm_tiny_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
   
  <!--
  <depend package="roscpp"/>
  <depend package="cereal_port"/>
  <depend package="rwrc14_msgs"/>
  <depend package="nav_msgs"/>
  <depend package="geometry_msgs"/>
  <depend package="tf"/>
  <rosdep name="eigen"/>
  -->

</package>


